changed all.yml to full.yml and fixed some bugs

--- a/ansible/full.yml
+++ b/ansible/full.yml
@@ -4,7 +4,7 @@
   connection: local
 
   pre_tasks:
-    - name: Debugging from all.yml
+    - name: Debugging from full.yml
       debug:
         msg: "{{ playbook_dir }}"
 
