--- a/ansible/full.yml
+++ b/ansible/full.yml
@@ -14,8 +14,8 @@
 # Include "development" playbook for development (like nginx, php or mysql)
 - include: development.yml
     
-# Include "software" playbook for the software installation
-- include: software.yml
+# Include "applications" playbook for the installation of applications
+- include: applications.yml
     
 # Include "configuration" playbook for the configuration of the dock, 
 # the launchpad or startup-items and default apps for files
