--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,5 +1,5 @@
 ---
 
 - name: geerlingguy.mas
-- name: danbohea.sketch
-- name: geerlingguy.dotfiles
+#- name: danbohea.sketch
+#- name: geerlingguy.dotfiles
