--- a/ansible/roles/php/handlers/main.yml
+++ b/ansible/roles/php/handlers/main.yml
@@ -8,3 +8,25 @@
 - name: restart php-fpm 5.6
   become: yes
   command: brew services restart homebrew/php/php56
+
+
+- name: start php-fpm 7.0
+  become: yes
+  command: brew services start homebrew/php/php70
+
+
+- name: restart php-fpm 7.0
+  become: yes
+  command: brew services restart homebrew/php/php70
+
+
+
+- name: start php-fpm 7.1
+  become: yes
+  command: brew services start homebrew/php/php71
+
+
+- name: restart php-fpm 7.1
+  become: yes
+  command: brew services restart homebrew/php/php71
+
