--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -10,13 +10,26 @@
   include_tasks: install.yml
   vars:
     version: 5.6
+    version_number: 56
 
 - name: Install PHP version 7.0
   include_tasks: install.yml
   vars:
     version: 7.0
+    version_number: 70
 
 - name: Install PHP version 7.1
   include_tasks: install.yml
   vars:
     version: 7.1
+    version_number: 71
+
+
+- name: Install composer
+  homebrew:
+    name: composer
+    state: present
+
+
+
+
